--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "atom-todo",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "ng build --configuration production",
+    "build:prod": "ng build --prod --aot --build-optimizer",
+    "build:analyze": "ng build --source-map --stats-json",
+    "serve:prod": "ng serve --configuration production"
   },
   "private": true,
   "dependencies": {
