--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "atom-todo",
   "version": "0.0.0",
   "scripts": {
-    "build": "ng build --configuration production",
-    "build:prod": "ng build --prod --aot --build-optimizer",
+    "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "build:analyze": "ng build --source-map --stats-json",
     "serve:prod": "ng serve --configuration production"
   },
