fix: update Firebase hosting public directory to include browser subdirectory

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/atom-todo",
+    "public": "dist/atom-todo/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
